--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -80,7 +80,7 @@
 @wellColor: #F7F7F7;
 @notificationBgColor: #EB1939;
 @notificationLinkHoverBgColor: #CC112D;
-@alertColor: #a94442;
+@alertColor: hsla(1, 44%, 46%, 0.9);
 
 
 /**
@@ -109,6 +109,7 @@ body {
   text-rendering: optimizeLegibility;
 }
 .sys-maintenance {
+  /*
   position: fixed;
   z-index: 2000;
   font-size: 12px;
@@ -122,11 +123,24 @@ body {
   color: @alertColor;
   background: #FFF;
   text-align: center;
+  */
+  margin: 1em auto;
+  padding: 2px 8px 14px;
+  color: #FFF;
+  width: 650px;
+  background: @alertColor;
+  text-align: center;
+  max-width: 100%;
+  .message {
+    line-height: 26px;
+    font-weight: normal;
+  }
   .title {
     text-transform: uppercase;
     font-weight: bold;
   }
 }
+/*
 @media (min-width: 699px) {
   .sys-maintenance {
     font-size: 14px;
@@ -134,10 +148,15 @@ body {
 }
 @media (min-width: 1200px) {
   .sys-maintenance {
-    top: 0;
-    height: 58px;
+    top: 12em;
   }
 }
+@media (min-width: 1400px) {
+  .sys-maintenance {
+    top: 16em;
+    height: 58px;
+  }
+}*/
 .save-loader-wrapper {
   .load-icon {
     margin-left:4px;
