--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7734,7 +7734,7 @@ a.home--modal-link {
     top: 6em;
     right: 0;
     left: 0;
-    height: 65px;
+    height: 60px;
     background: #a94442;
     z-index: 100001;
     text-align: center;
@@ -7742,6 +7742,8 @@ a.home--modal-link {
     color: #fffc;
     .title {
         font-weight: 700;
+        margin-top: 6px;
+        margin-bottom: 6px;
         text-transform: uppercase;
     }
 }
