--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -80,6 +80,7 @@
 @wellColor: #F7F7F7;
 @notificationBgColor: #EB1939;
 @notificationLinkHoverBgColor: #CC112D;
+@alertColor: hsla(1, 44%, 46%, 0.9);
 
 
 /**
@@ -107,9 +108,26 @@ body {
   font-size: @baseMobileFontSize;
   text-rendering: optimizeLegibility;
 }
+.sys-maintenance {
+  margin: 1em auto;
+  padding: 2px 8px 14px;
+  color: #FFF;
+  width: 750px;
+  background: @alertColor;
+  text-align: center;
+  max-width: 100%;
+  .message {
+    line-height: 26px;
+    font-weight: normal;
+  }
+  .title {
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+}
 .save-loader-wrapper {
   .load-icon {
-    margin-left:4px; 
+    margin-left:4px;
     margin-top:5px;
   }
   .success-icon {
