--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7729,6 +7729,39 @@ a.home--modal-link {
         background: #607d8b;
     }
 }
+.sys-maintenance {
+    position: fixed;
+    top: 6em;
+    right: 0;
+    left: 0;
+    height: 60px;
+    background: #a94442;
+    z-index: 100001;
+    text-align: center;
+    padding: 0 8px;
+    color: #fffc;
+    .title {
+        font-weight: 700;
+        margin-top: 6px;
+        margin-bottom: 6px;
+        text-transform: uppercase;
+    }
+}
+.sys-maintenance .title,
+.sys-maintenance .message {
+    font-size: 12px;
+}
+@media (min-width: 900px) {
+    .sys-maintenance {
+        top: 0;
+    }
+}
+@media (min-width: 992px) {
+    .sys-maintenance .title,
+    .sys-maintenance .message {
+        font-size: 1.2em;
+    }
+}
 @media (min-width: 1200px) {
     .home--item-container {
         width: 542px;
