--- a/portal/static/less/psaTracker.less
+++ b/portal/static/less/psaTracker.less
@@ -2,15 +2,68 @@
 @psaTrackerBorderColor: #eff0f1;
 @psaTrackerTableHeaderBgColor: #496470;
 @psaTrackerStrokeColor: #777;
-@psaTrackerHoverBgColor: #eff0f1;
+@psaTrackerHoverBgColor: #b0bdc3;
 @legendTextColor: #333;
+@selectedColor: #777;
+@hoverColor: #FFF;
+@tooltipColor: #374550;
 
+.filter-control {
+    -webkit-appearance: none;
+    height: 2.3em;
+    outline: none;
+}
+.tooltip {
+    position: absolute;         
+    text-align: center;         
+    width: 60px;                    
+    height: 28px;                   
+    padding: 2px;               
+    font: 12px sans-serif;      
+    background: @tooltipColor;
+    color: #FFF;
+    border: 0px;        
+    border-radius: 4px;         
+    pointer-events: none; 
+    &:after {
+      border-top: 10px solid @tooltipColor;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      top: 100%;
+      content: " ";
+      height: 0;
+      left: 45%;
+      position: absolute;
+      width: 0;
+      transform: translateY(-50%);
+    }  
+}
 #mainPsaApp {
     margin-top: 1em;
 }
 #mainPsaApp section {
     margin-top: 2em;
     margin-bottom: 2em;
+}
+.focused {
+    cursor: pointer;
+}
+
+select,
+.filter-control,
+option.select-option {
+    color: #848688;
+}
+.refresh {
+    margin: 0 0.5em;
+    padding: 0.5em;
+    display: inline-block;
+    border: 1px solid;
+    border-radius: 2px;
+    &:hover {
+        cursor: pointer;
+        color: @psaTrackerHoverBgColor;
+    }
 }
 .psa-tracker-title {
 	background-color: #374550;
@@ -42,6 +95,30 @@
     overflow-y: auto;
     min-height: 400px;
 }
+#psaTrackerDataSidebar {
+    .btn {
+        font-size: 12px;
+        margin: 1em 0;
+    }
+}
+#psaTrackerTreatmentContainer {
+    position: relative;
+    transition: -webkit-transform .5s 2s ease;
+    transition: transform .5s 2s ease;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+    border: 2px solid #bf9d9d;
+    padding: 1em 0.5em;
+    margin: 1em auto;
+    max-width: 100%;
+    font-size: 14px;
+    &.inactive {
+        -webkit-transform: translateX(-150%);
+        -ms-transform: translateX(-150%);
+        transform: translateX(-150%);
+    }
+}
 
 @media (min-width: 992px) {
     #psaTrackerResultsTable {
@@ -51,8 +128,12 @@
     #psaTrackerResultsContainer {
         overflow-y: hidden;
     }
+    #psaTrackerTreatmentContainer {
+        max-width: 90%;
+    }
 }
-#psaTrackerResultsTable {
+#psaTrackerResultsTable,
+#psaTrackerHistoryTable {
     TH, TD {
         padding: 0.5em 1em;
         border: 1px solid @psaTrackerStrokeColor;
@@ -61,8 +142,14 @@
         letter-spacing: 1px;
         padding: 0.8em;
     }
+    TR.result-row {
+        border: 1px solid;
+    }
+    TR.result-row.selected,
     TR.result-row:hover {
-        background-color: @psaTrackerHoverBgColor;
+        /*border: solid 2px @selectedColor; */
+        background: @psaTrackerHoverBgColor;
+        color: @hoverColor;
     }
     .result-cell{
         input {
@@ -74,9 +161,19 @@
             &:hover {
                 cursor:pointer;
                 text-decoration: underline;
-                color: #496470;
+                color: @hoverColor;
                 cursor: pointer;
             }
+        }
+    }
+}
+#PSAHistoryModal {
+    .modal-dialog {
+        width: 400px;
+        max-width: 100%;
+        .body-content {
+            max-height: 450px;
+            overflow-y: auto;
         }
     }
 }
@@ -127,7 +224,7 @@
 #psaTrackerNoResultContainer {
     margin-top: 1em;
     margin-bottom: 1em;
-    background: @psaTrackerHoverBgColor;
+    background: #e8e8ea;
     min-height: 10em;
     padding: 4.25em 1em;
 }
@@ -194,8 +291,18 @@
         font-weight: 600;
     }
 }
+.info-link {
+    text-decoration: underline;
+    font-weight: bold;
+}
 @media (min-width: 992px) {
     #psaTrackerGraphContainer {
         margin-top: 1.5em;
+    }
+    #psaTrackerDataSidebar {
+        .btn {
+            font-size: 0.85em;
+            margin: 0; 
+        }
     }
 }
