--- a/portal/templates/psa_tracker.html
+++ b/portal/templates/psa_tracker.html
@@ -7,17 +7,17 @@
 <main id="mainPsaApp">
     <input type="hidden" id="psaTrackerUserId" value="{{user.id}}"/>
     <section class="psa-tracker-title">
-        <h2 class="tnth-header heading">{{_("Track Your PSA")}}</h2>
-        {{_("Prostate-specific antigen, or PSA, is a protein produced by cells of the prostate gland. The PSA test measures the level of PSA in a man's blood. For this test, a blood sample is sent to a laboratory for analysis. The results are reported as nanograms of PSA per milliliter (ng/mL) of blood.")}}
-        <div id="psaTrackerButtonsContainer">
-            <button class="btn btn-tnth-primary" data-toggle="modal" data-target="#addPSAModal">{{_('ADD NEW PSA RESULT')}}</button>
-        </div>
+        {% raw -%}
+            <h2 class="tnth-header heading">{{intro.header}}</h2>
+            {{intro.body}}
+            <div id="psaTrackerButtonsContainer"><button class="btn btn-tnth-primary" data-toggle="modal" data-target="#addPSAModal">{{intro.addText}}</button></div>
+        {%- endraw %}
     </section>
     <section>
-        {% raw %}
+        {% raw -%}
             <div id="psaTrackerNoResultContainer" class="text-warning" v-if="!items.length">
                 {{noResultMessage}}
-                <span class="glyphicon glyphicon-refresh refresh" aria-hidden="true" v-if="showRefresh" v-on:click="refresh" v-bind:title="getRefreshMessage()"></span>
+                <span class="glyphicon glyphicon-refresh refresh" aria-hidden="true" v-if="isActedOn()" v-on:click="refresh" v-bind:title="getRefreshMessage()"></span>
             </div>
             <div id="psaTrackerResultsContainer" v-if="items.length > 0">
                 <div class="psaTrackerLoader" v-bind:class="{ 'tnth-hide': !loading }"><i class="fa fa-spinner fa-spin fa-2x"></i></div>
@@ -46,8 +46,8 @@
                         </tr>
                     </table>
                     <div id="psaTrackerDataSidebar">
-                        <button class="btn btn-tnth-primary" v-show="history.items.length" v-on:click="showHistory">{{history.label}}</button>
-                        <button class="btn btn-tnth-primary" v-on:click="refresh" v-bind:disabled="!showRefresh" v-if="showFilters()">{{filters.clearLabel}}</button>
+                        <button class="btn btn-tnth-primary" v-show="history.items.length" v-on:click="showHistory" v-html="history.buttonLabel"></button>
+                        <button class="btn btn-tnth-primary" v-on:click="refresh" v-bind:disabled="!isActedOn()" v-if="showFilters()" v-html="filters.clearLabel"></button>
                     </div>
                 </div>
                 <div id="psaTrackerGraphContainer" v-bind:class="{ 'tnth-hide': loading }">
@@ -59,46 +59,42 @@
                             <span>{{treatment.treatmentDatePrompt}}</span> <span class="text-warning display-text">{{item.date}}</span>
                         </div>
                         <div v-if="!showTreatment()">
-                            <span class="text-warning">No treatment received as of today.</span>
+                            <span class="text-warning" v-html="treatment.noTreatmentText"></span>
                         </div>
-                        <a href="profile#profileProceduresWrapper" class="info-link">{{editLink}}</a>
+                        <a href="profile#profileProceduresWrapper" class="info-link" v-html="editLink"></a>
                     </div>
                 </div>
             </div>
             <div id="psaTrackerErrorMessageContainer" class="error-message"></div>
-        {% endraw %}
+        {%- endraw %}
     </section>
     <div class="modal fade" id="addPSAModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                {% raw %}
-                	<div class="modal-header-title">{{ newItem.edit ? editTitle: addTitle}}</div>
-                {% endraw %}
+                <button type="button" class="close" data-dismiss="modal" v-bind:aria-label="closeText"><span aria-hidden="true">&times;</span></button>
+                <div class="modal-header-title" v-html="getAddModalTitle()"></div>
             </div>
             <div class="modal-body">
                 <div class="body-content">
                     <div class="psaTrackerModalLoader" v-bind:class="{ 'tnth-hide': !modalLoading }"><i class="fa fa-spinner fa-spin fa-2x"></i></div>
                     <table id="psaTrackerAddTable" v-bind:class="{ 'tnth-hide': modalLoading }">
                         <tr>
-                            <td>{{_("PSA (ng/ml)")}}</td>
-                            <td><input id="psaResult" type="text" v-model.trim="newItem.result" class="form-control" placeholder="{{_('Enter a number')}}"/></td>
+                            <td class="field-label" v-html="fields.resultLabel"></td>
+                            <td><input id="psaResult" type="text" v-model.trim="newItem.result" class="form-control" v-bind:placeholder="fields.resultPlaceholder"/></td>
                         </tr>
                         <tr>
-                            <td>{{_("PSA Test Date")}}</td>
-                            <td><input id="psaDate" type="text" v-model.trim="newItem.date" class="form-control" placeholder="{{_('d M yyyy, example: 1 Jan, 2017')}}"/></td>
+                            <td class="field-label" v-html="fields.dateLabel"></td>
+                            <td><input id="psaDate" type="text" v-model.trim="newItem.date" class="form-control" v-bind:placeholder="fields.datePlaceholder"/></td>
                         </tr>
                     </table>
                     <br/>
-                    {% raw %}
-                        <div class="error-message text-center">{{addErrorMessage}}</div>
-                    {% endraw %}
+                    <div class="error-message text-center" v-html="addErrorMessage"></div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" v-on:click="onAdd()" v-bind:disabled="!isValidData()">{{_("Save")}}</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">{{_("Close")}}</button>
+                <button type="button" class="btn btn-default" v-on:click="onAdd()" v-bind:disabled="!isValidData()" v-html="saveText"></button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" v-html="closeText"></button>
             </div>
           </div>
         </div>
@@ -107,34 +103,25 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <div class="modal-header-title">{{_("PSA Result History")}}</div>
+                <button type="button" class="close" data-dismiss="modal" v-bind:aria-label="closeText"><span aria-hidden="true">&times;</span></button>
+                <div class="modal-header-title" v-html="history.title"></div>
             </div>
             <div class="modal-body">
                 <div class="body-content">
-                    {% raw %}
                     <table id="psaTrackerHistoryTable">
-                        <THEAD class="psa-tracker-table-header">
-                            <TH v-for="item in headers">{{item}}</TH>
-                        </THEAD>
-                        <TR v-for="item in history.items">
-                            <TD>{{item.date}}</TD>
-                            <TD>{{item.result}}</TD>
-                        </TR>
+                        <THEAD class="psa-tracker-table-header"><TH v-for="item in headers" v-html="item">{{item}}</TH></THEAD>
+                        <TR v-for="item in history.items"><TD v-html="item.date"></TD><TD v-html="item.result"></TD></TR>
                     </table>
-                    {% endraw %}
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">{{_("Close")}}</button>
-            </div>
+            <div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal" v-html="closeText"></button></div>
           </div>
         </div>
     </div>
     <svg width="300" height="200">
         <defs>
-            <path id="arrow" d="M2,2 L10,6 L2,10 L6,6 L2,2" style="fill: #8a6d3b" transform="rotate(90)" stroke-width="4"></path>
-            <rect id="marker" width="4" height="4" stroke="#8a6d3b" stroke-width="1" fill="#8a6d3b"/>
+            <path id="arrow" d="M2,2 L10,6 L2,10 L6,6 L2,2" class="marker" transform="rotate(90)" stroke-width="4"></path>
+            <rect id="marker" width="4" height="4" stroke-width="1" class="marker"/>
         </defs>
     </svg>
 </main>
