TN-932 followup fixes

--- a/portal/static/less/psaTracker.less
+++ b/portal/static/less/psaTracker.less
@@ -44,6 +44,9 @@
     fill: @markerColor;
     stroke-width: 1;
 }
+.sidenote {
+    margin: 1em 0;
+}
 #mainPsaApp {
     margin-top: 1em;
 }
@@ -184,9 +187,13 @@ option.select-option {
         width: 400px;
         max-width: 100%;
         .body-content {
-            max-height: 450px;
+            max-height: 500px;
             overflow-y: auto;
         }
+    }
+    #psaTrackerHistoryTable {
+        width: 100%;
+        max-width: 100%;
     }
 }
 #psaTrackerAddTable {
