TN-1207 MedidataRave integration UI changes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2300,6 +2300,9 @@ input.clinic {
 #accountCreationContentContainer[data-account='patient'] #bdGroup {
   min-height: 114px;
 }
+#accountCreationContentContainer[data-account='staff'] #userOrgs {
+  margin-top: -1.5em;
+}
 #emailInfoText {
   display: none;
 }
