Port use of `type()` to python enum.Enum for ROLE and RELATIONSHIP

--- a/portal/eproms/templates/eproms/privacy.html
+++ b/portal/eproms/templates/eproms/privacy.html
@@ -18,6 +18,6 @@
 {% endblock %}
 {% block additional_scripts %}
 	{% if editorUrl %}
-	<script>appendLREditContainer($("#privacyContentContainer"), "{{editorUrl}}", {% if user and user.has_role(ROLE.CONTENT_MANAGER) %}true{% else %}false{%endif%});</script>
+	<script>appendLREditContainer($("#privacyContentContainer"), "{{editorUrl}}", {% if user and user.has_role(ROLE.CONTENT_MANAGER.value) %}true{% else %}false{%endif%});</script>
 	{% endif %}
 {% endblock %}
