--- a/portal/templates/admin/patients_by_org.html
+++ b/portal/templates/admin/patients_by_org.html
@@ -5,7 +5,7 @@
     <h4 class="tnth-headline">{% trans %}Patient List{% endtrans %}</h4>
     <br/>
     <div id="patientListOptions">
-      {%- if user.has_role(ROLE.STAFF) -%}
+      {%- if user.has_role(ROLE.STAFF.value) -%}
       <a href="{{ url_for('patients.patient_profile_create') }}" id="createUserLink" class="btn btn-default">{{ _("Create a patient record") }}</a>
       <div class="or">or</div>
       {%- endif -%}
