--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -35,7 +35,7 @@
                     {% if person.id == current_user.id -%}
                         {{_("My Information")}}
                     {% else %}
-                        {% if person.has_role(ROLE.PATIENT) -%}
+                        {% if person.has_role(ROLE.PATIENT.value) -%}
                             {{_("Patient Information") }}
                         {%- else%}
                             {{_("User Information") }}
@@ -47,8 +47,8 @@
                         <tr><td class="text-muted">{{_("Name")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.fullName" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
                         <tr><td class="text-muted">{{_("Date of Birth")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.displayBirthDate" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
                         <tr><td class="text-muted">{{_("Email")}}</td><td id="email_view">{% raw %}<section-view v-bind:data="demo.data.email" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
-                        {% if person.has_role(ROLE.PATIENT) and not current_user.has_role(ROLE.PATIENT) %}<tr class="study-id-view"><td class="text-muted">{{_("Study Id")}}</td><td>{%raw%}<section-view v-bind:data="demo.data.studyId" v-bind:nodatatext="notProvidedText()"></section-view>{%endraw%}</td></tr>{% endif %}
-                        {% if person.has_role(ROLE.PATIENT) and not current_user.has_role(ROLE.PATIENT) %}<tr class="site-id-view"><td class="text-muted">{{_("Site Id")}}</td><td>{%raw%}<section-view v-bind:data="demo.data.siteId" v-bind:nodatatext="notProvidedText()"></section-view>{%endraw%}</td></tr>{% endif %}
+                        {% if person.has_role(ROLE.PATIENT.value) and not current_user.has_role(ROLE.PATIENT.value) %}<tr class="study-id-view"><td class="text-muted">{{_("Study Id")}}</td><td>{%raw%}<section-view v-bind:data="demo.data.studyId" v-bind:nodatatext="notProvidedText()"></section-view>{%endraw%}</td></tr>{% endif %}
+                        {% if person.has_role(ROLE.PATIENT.value) and not current_user.has_role(ROLE.PATIENT.value) %}<tr class="site-id-view"><td class="text-muted">{{_("Site Id")}}</td><td>{%raw%}<section-view v-bind:data="demo.data.siteId" v-bind:nodatatext="notProvidedText()"></section-view>{%endraw%}</td></tr>{% endif %}
                         <tr><td class="text-muted">{{_("Cell")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.cellPhone" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
                         <tr><td class="text-muted">{{_("Phone (Other)")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.homePhone" v-bind:nodatatext="notProvidedText()"></section-view>{%endraw%}</td></tr>
                    </table>
@@ -57,8 +57,8 @@
                     {{profileName(person)}}
                     {{profileBirthDate(person)}}
                     {{profileEmail(person)}}
-                    {% if person.has_role(ROLE.PATIENT) and not current_user.has_role(ROLE.PATIENT) %} {{profileStudyID(current_user)}} {% endif %}
-                    {% if person.has_role(ROLE.PATIENT) and not current_user.has_role(ROLE.PATIENT) %} {{profileSiteID(current_user)}} {% endif %}
+                    {% if person.has_role(ROLE.PATIENT.value) and not current_user.has_role(ROLE.PATIENT.value) %} {{profileStudyID(current_user)}} {% endif %}
+                    {% if person.has_role(ROLE.PATIENT.value) and not current_user.has_role(ROLE.PATIENT.value) %} {{profileSiteID(current_user)}} {% endif %}
                     {{profilePhone(person)}}
                     {{profileAltPhone(person)}}
                 {% endcall %}
@@ -275,7 +275,7 @@
 {% macro profileEmail(person) -%}
     <div class="form-group float-input-label profile-section data-update-on-validated" id="emailGroup" data-error-field="erroremail" data-loader-container="true" data-profile-section-id="email">
         <label for="email">{{_("Email Address")}}</label>
-        <input type="text" class="form-control" id="email" name="email" data-save-container-id="emailGroup" placeholder="{{ _('Email Address') }}" value="{{ person.email if person and person.email and person.email != '__no_email__' }}" data-customemail="true" data-error-field="erroremail" {% if person and person.has_role(ROLE.PATIENT)%}data-optional="true"{% else %}required{% endif %} />
+        <input type="text" class="form-control" id="email" name="email" data-save-container-id="emailGroup" placeholder="{{ _('Email Address') }}" value="{{ person.email if person and person.email and person.email != '__no_email__' }}" data-customemail="true" data-error-field="erroremail" {% if person and person.has_role(ROLE.PATIENT.value)%}data-optional="true"{% else %}required{% endif %} />
         <div class="help-block with-errors" id="erroremail"></div>
         {{saveLoaderDiv("emailGroup")}}
     </div>
@@ -351,7 +351,7 @@
     {%- endif -%}
 {%- endmacro %}
 {% macro profileCommunications(person, current_user) -%}
-    {%- if person and person.has_role(ROLE.PATIENT) -%}
+    {%- if person and person.has_role(ROLE.PATIENT.value) -%}
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container" data-profile-section-id="communication">
@@ -375,7 +375,7 @@
                               </div>
                             </div>
                         {%- endif %}
-                        {% if current_user and (current_user.has_role(ROLE.STAFF) or current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.INTERVENTION_STAFF)) %}
+                        {% if current_user and (current_user.has_role(ROLE.STAFF.value) or current_user.has_role(ROLE.ADMIN.value) or current_user.has_role(ROLE.INTERVENTION_STAFF.value)) %}
                          <div class="tab">
                           <input id="tab-three" name="tabGroup" type="radio" data-validate="false" class="tab-input">
                           <label id="lbEmailLog" for="tab-three" class="tab-label">{{_("Email audit log")}}</label>
@@ -388,7 +388,7 @@
                 </div>
             </div>
         </div>
-    {%- elif person and person.has_role(ROLE.STAFF) and current_user and current_user.has_role(ROLE.STAFF_ADMIN)-%}
+    {%- elif person and person.has_role(ROLE.STAFF.value) and current_user and current_user.has_role(ROLE.STAFF_ADMIN.value)-%}
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container" data-profile-section-id="communication">
@@ -481,7 +481,7 @@
             <div id="userOrgs" class="customized">
                <input type="hidden" id="stock_consent_url" value="{{ url_for('portal.stock_consent', org_name='placeholder', _external=True)}}" />
                <p class="prompt text-muted">
-                {% if  current_user and current_user.has_role(ROLE.STAFF) %}
+                {% if  current_user and current_user.has_role(ROLE.STAFF.value) %}
                     {{_("In what state is the patient currently receiving prostate cancer care?")}}
                 {% else %}
                     {{_("In what state are you currently receiving prostate cancer care?")}}
@@ -490,7 +490,7 @@
                <div class="state-selector-container selector-show">
                     <select id="stateSelector" class="form-control"></select>
                 </div>
-               <div id="fillOrgs" userId="{{person.id if person}}" class="orgs-by-state" {%if person and person.has_role(ROLE.PATIENT) and person.id == current_user.id %}patient_view="true"{%endif%}>
+               <div id="fillOrgs" userId="{{person.id if person}}" class="orgs-by-state" {%if person and person.has_role(ROLE.PATIENT.value) and person.id == current_user.id %}patient_view="true"{%endif%}>
                    <p class="clinic-prompt prompt selector-show">{{_("What is your main clinic for prostate cancer care?")}}</p>
                    <div class="main-state-container selector-show"></div>
                </div>
@@ -529,8 +529,8 @@
                 <label>{{_("Clinics ")}}<span class="text-muted smaller-text">({{_("Optional")}})</span></label>{% endif %}
                 <div class="indent">
                 <input type="hidden" id="stock_consent_url" value="{{ url_for('portal.stock_consent', org_name='placeholder', _external=True)}}">
-                <div id="fillOrgs" {% if person and person.has_role(ROLE.PATIENT) and (person.id == current_user.id) %}patient_view="true"{%endif%}></div>
-                {%- if (person and (person.has_role(ROLE.STAFF) or person.has_role(ROLE.STAFF_ADMIN))) -%}
+                <div id="fillOrgs" {% if person and person.has_role(ROLE.PATIENT.value) and (person.id == current_user.id) %}patient_view="true"{%endif%}></div>
+                {%- if (person and (person.has_role(ROLE.STAFF.value) or person.has_role(ROLE.STAFF_ADMIN.value))) -%}
                     <!-- nothing to do -->
                 {%- else -%}
                     <div class="noOrg-container"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0"><span>{{_("None of the Above")}}</span></label></div>
@@ -547,8 +547,8 @@
     <div class="get-orgs-error error-message"></div>
     <div class="get-demo-error error-message"></div>
     <div class="put-demo-error error-message"></div>
-    {%- if ((person.has_role(ROLE.PATIENT) or current_user.has_role(ROLE.PATIENT)) and 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or
-                ((person.has_role(ROLE.PATIENT) and current_user.has_role(ROLE.STAFF)) and 'staff' in config.CONSENT_EDIT_PERMISSIBLE_ROLES)
+    {%- if ((person.has_role(ROLE.PATIENT.value) or current_user.has_role(ROLE.PATIENT.value)) and 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or
+                ((person.has_role(ROLE.PATIENT.value) and current_user.has_role(ROLE.STAFF.value)) and 'staff' in config.CONSENT_EDIT_PERMISSIBLE_ROLES)
              -%}
     <input type="hidden" id="requireMorph" value="true" />
     {%- endif -%}
@@ -814,7 +814,7 @@
 </div>
 {%- endmacro %}
 {% macro profileAuditLog(person, current_user) -%}
-    {% if (person and current_user) and (current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.STAFF) or current_user.has_role(ROLE.INTERVENTION_STAFF)) %}
+    {% if (person and current_user) and (current_user.has_role(ROLE.ADMIN.value) or current_user.has_role(ROLE.STAFF.value) or current_user.has_role(ROLE.INTERVENTION_STAFF.value)) %}
         <input type="hidden" id="audit_user_id" value="{{person.id}}"/>
         <div id="auditTableToolBar" data-profile-section-id="auditlog"></div>
         <table id="profileAuditLogTable" class="smaller-text"></table>
@@ -1029,7 +1029,7 @@
 {% macro profileSiteID(current_user) -%}
     <div id="profileSiteIDContainer" class="form-group" data-loader-container="true">
         <label id="profileSiteID" class="text-muted">{{_("Site ID")}}</label>
-        <input type="text" id="profileSiteId" aria-labelledby="profileSiteID" class="form-control" {%if current_user and current_user.has_role(ROLE.PATIENT) %}disabled{% endif %} data-htmltags="true" data-error-field="errorprofileSiteId" v-model.lazy="demo.data.siteId" v-on:change="updateIdentifierData"/>
+        <input type="text" id="profileSiteId" aria-labelledby="profileSiteID" class="form-control" {%if current_user and current_user.has_role(ROLE.PATIENT.value) %}disabled{% endif %} data-htmltags="true" data-error-field="errorprofileSiteId" v-model.lazy="demo.data.siteId" v-on:change="updateIdentifierData"/>
         <div class="help-block with-errors"></div>
         {{saveLoaderDiv("profileSiteIDContainer")}}
         <div id="errorprofileSiteId" class="error-message"></div>
@@ -1171,7 +1171,7 @@
                 {% call viewSection() %}<div id="procedure_view"></div>{% endcall %}
                 {% call editSection() -%}
                     <p class="text-muted">
-                        {%-if current_user and current_user.has_role(ROLE.STAFF)-%}
+                        {%-if current_user and current_user.has_role(ROLE.STAFF.value)-%}
                             {{ _("Which of the following prostate cancer management options has the patient had, if any? If you don&#39;t remember the exact date, please make your best guess.") }}
                         {%-elif person and current_user and (person.id == current_user.id) -%}
                             {{ _("Which of the following prostate cancer management options have you had, if any? If you don&#39;t remember the exact
