--- a/portal/templates/profile/staff_profile.html
+++ b/portal/templates/profile/staff_profile.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="row"><div class="col-md-12 col-xs-12">{{profile_macro.profileLocaleTimeZone(user)}}</div></div>
-    {%- if (user and current_user) and current_user.has_role(ROLE.ADMIN) and not user.has_role(ROLE.SERVICE) %}
+    {%- if (user and current_user) and current_user.has_role(ROLE.ADMIN.value) and not user.has_role(ROLE.SERVICE.value) %}
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 {% call profile_macro.profileSection(editable=False) -%}
@@ -29,7 +29,7 @@
             </div>
         </div>
     {%- endif %}
-    {%- if (user and current_user) and (current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.STAFF) or current_user.has_role(ROLE.INTERVENTION_STAFF)) %}
+    {%- if (user and current_user) and (current_user.has_role(ROLE.ADMIN.value) or current_user.has_role(ROLE.STAFF.value) or current_user.has_role(ROLE.INTERVENTION_STAFF.value)) %}
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 {% call profile_macro.profileSection(editable=False) -%}
