TN-1239 consent history display fix

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -110,7 +110,7 @@ body {
 }
 .save-loader-wrapper {
   .load-icon {
-    margin-left:4px; 
+    margin-left:4px;
     margin-top:5px;
   }
   .success-icon {
@@ -2707,6 +2707,7 @@ div.timezone-warning.text-warning {
 #consentListTable,
 #profileAuditLogTable {
     font-size: @mobileSmallSize;
+    width: 100%;
     max-width: 100%;
 }
 #profile-gender-list {
