--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -885,10 +885,13 @@ div.pull-right {
     margin: 0.8em auto;
   }
   td.reports-field {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    a {
+    .intervention-btn-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    & a,
+    .intervention-btn-container a {
       width: 4em;
       max-width: 100%;
       padding: 0.6em;
