TN-932 psa tracker y-axis fix

--- a/portal/static/less/psaTracker.less
+++ b/portal/static/less/psaTracker.less
@@ -274,7 +274,8 @@ option.select-option {
     .y-axis path {
         stroke-width: 0
     }
-    .axis-stroke {
+    .axis-stroke,
+    .grid-y text {
         font-size: 12px;
         stroke: @psaTrackerStrokeColor;
         stroke-width: 0.5;
